syntax = "proto3";

package cheers.type;

option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/type/story;storypb";


import "cheers/type/privacy/privacy.proto";

message Story {
  string id = 1;
  string address = 4;
  Privacy privacy = 5;
  string photo = 6;
  bool is_reaction_enabled = 7;
  string location_name = 8;
  enum StoryType {
    IMAGE = 0;
    VIDEO = 1;
  }
  StoryType type = 11;
  int64 create_time = 12;
  bool share_enabled = 14;
}
